cluster/k8s/agents/haku-squid/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haku-squid
  namespace: haku-squid
spec:
  selector:
    app.kubernetes.io/name: haku-squid
  ports:
    - name: proxy
      port: 3128
      targetPort: 3128
